--- a/restaurant.css
+++ b/restaurant.css
@@ -10,10 +10,30 @@ p {
 	text-align: center;
 }
 
-.show-grid [class*="span"] {
-	background-color: lightblue;
+#nav {
+width:750px;
+margin:0 auto;
+list-style:none;
+}
+#nav li {
+float:left;
+}
+#nav a {
+display:block;
+text-align:center;
+width:150px; /* fixed width */
+text-decoration:none; 
+}
+
+img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.food {
+	margin-left: 250px;
+	margin-right: 250px;
 	text-align: center;
-	border-radius: 3px;
-	min-height: 40px;
-	line-height: 40px;
+
 }
