--- a/restaurant.css
+++ b/restaurant.css
@@ -5,30 +5,23 @@ h1 {
 h2 {
 	text-align: center;
 }
-
-p {
+#motto {
 	text-align: center;
 }
 
 #nav {
-width:750px;
-margin:0 auto;
-list-style:none;
+	width:750px;
+	margin:0 auto;
+	list-style:none;
 }
 #nav li {
-float:left;
+	float:left;
 }
 #nav a {
-display:block;
-text-align:center;
-width:150px; /* fixed width */
-text-decoration:none; 
-}
-
-img {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+	display:block;
+	text-align:center;
+	width:150px; /* fixed width */
+	text-decoration:none; 
 }
 
 .food {
@@ -36,4 +29,28 @@ img {
 	margin-right: 250px;
 	text-align: center;
 
+}
+.profile{
+	float: left;
+	padding-left: 15em;
+	padding-right: 40px;
+}
+/* About Us */
+
+
+#name {
+	text-align: left;
+	padding-left: 9em;
+}
+.bio {
+	padding-top: 40px;
+}
+.bar {
+	clear: left;
+}
+
+/* Contact Page */
+
+.contact {
+	text-align: center;
 }
