--- a/restaurant.css
+++ b/restaurant.css
@@ -133,6 +133,12 @@ h2 {
 	width: 250px;
 }
 
+#group {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 /* About Us */
 .profile{
 	float: left;
